# royal-pipes

./: .gitignore  LICENSE.md  README.md  dagster.yaml  pyproject.toml
src/royal_pipes/: config.py  db.py  definitions.py  extract.py  load.py  models.py  statistics.py  transform.py
src/royal_pipes/data/: stopwords.txt
src/royal_pipes/defs/: assets.py  io_managers.py  resources.py
