[project]
name = "royal_pipes"
requires-python = ">=3.10,<3.14"
version = "0.1.0"
dependencies = [
    "aiohttp>=3.13.2",
    "beautifulsoup4>=4.14.3",
    "dagster==1.12.4",
    "openai>=1.0.0",
    "playwright>=1.49.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "ruff>=0.14.8",
    "ty>=0.0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "royal_pipes"
registry_modules = [
    "royal_pipes.components.*",
]
